--- a/DSL_Stopwatch_(Group_5).ipynb
+++ b/DSL_Stopwatch_(Group_5).ipynb
@@ -847,7 +847,7 @@
       "source": [
         "---\n",
         "#Video\n",
-        "[DSL Stopwatch project (Group 5)](https://github.com/longjuice234/dsl-2025/blob/main/DSL%20Stopwatch%20Video%20(Group%205).mp4)\n",
+        "[DSL Stopwatch project (Group 5)](https://youtu.be/nuTYVnN0J0E)\n",
         "\n"
       ],
       "metadata": {
